--- a/eOdznaki-SPA/src/app/components/trail/trail.component.html
+++ b/eOdznaki-SPA/src/app/components/trail/trail.component.html
@@ -1,20 +1,20 @@
-<div class="container">
+<div class="container dashboard">
   <div class="row">
     <div id="directions" class="col-sm-3">
-      <div id="directionsPanel" class="form-group">
-        <label for="originInput">Origin</label>
-        <input #originInput class="form-control" type="text" placeholder="Origin"
+      <div id="directionsPanel" class="md-form">
+        <input mdbInput #originInput class="form-control" type="text" placeholder="Origin"
                autocomplete="off" [formControl]="searchControl">
 
-        <label for="destinationInput">Destination</label>
-        <input #destinationInput class="form-control" type="text" placeholder="Destination"
+        <input mdbInput #destinationInput class="form-control" type="text" placeholder="Destination"
                autocomplete="off" [formControl]="searchControl">
       </div>
       <div id="directionSteps" *ngFor="let trail of directions">
         <p  type="text">Origin: {{trail.origin}} | destination: {{trail.destination}}</p>
       </div>
       <div>
-        <button (click)="saveTrail()">Save trail</button>
+        <button mdbBtn color="info" outline="true" rounded="true" block="true"
+                class="my-4 waves-effect z-depth-0"
+                mdbWavesEffect (click)="saveTrail()">Save trail</button>
       </div>
     </div>
     <div id="map" class="col-sm-9">
