Add background img to modals header

--- a/eOdznaki-SPA/src/app/components/forum/forum.component.html
+++ b/eOdznaki-SPA/src/app/components/forum/forum.component.html
@@ -74,19 +74,19 @@
 
 <div mdbModal #frame="mdbModal" class="modal fade top" id="frameModalTop" tabindex="-1" role="dialog"
      aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
+  <div class="modal-dialog modal-dialog-centered newThreadModal" role="document">
     <div class="modal-content">
 
-      <div class="modal-header text-center">
+      <div class="modal-header text-center text-white" style="background-image: url(../../../assets/background-gradient.jpg);">
         <h4 class="modal-title w-100 font-weight-bold">New thread</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="frame.hide()">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
 
-      <form [formGroup]="threadForm" (ngSubmit)="addThread()">
-        <div class="modal-body mx-3">
-          <div class="md-form mb-5">
+      <form [formGroup]="threadForm" (ngSubmit)="addThread()" class="px-5 pt-0">
+        <div class="modal-body">
+          <div class="md-form">
             <input type="text" id="threadForm-title" class="form-control validate"
                    mdbInput
                    formControlName="title">
