Standarize modals button look

--- a/eOdznaki-SPA/src/app/components/forum/forum.component.html
+++ b/eOdznaki-SPA/src/app/components/forum/forum.component.html
@@ -104,7 +104,8 @@
         </div>
 
         <div class="modal-footer d-flex justify-content-center">
-          <button mdbBtn color="default" class="waves-light" mdbWavesEffect [disabled]="!threadForm.valid">Add</button>
+          <button mdbBtn color="info" outline="true" rounded="true" block="true" class="waves-effect"
+                  mdbWavesEffect [disabled]="!threadForm.valid">Add</button>
         </div>
       </form>
     </div>
