--- a/eOdznaki-SPA/src/app/components/post/post.component.html
+++ b/eOdznaki-SPA/src/app/components/post/post.component.html
@@ -131,7 +131,8 @@
         </div>
 
         <div class="modal-footer d-flex justify-content-center">
-          <button mdbBtn color="default" class="waves-light" mdbWavesEffect [disabled]="!postForm.valid">Answer</button>
+          <button mdbBtn color="info" outline="true" rounded="true" block="true" class="waves-effect"
+                  mdbWavesEffect [disabled]="!postForm.valid">Answer</button>
         </div>
       </form>
     </div>
