--- a/eOdznaki-SPA/src/app/components/forum/forum.component.html
+++ b/eOdznaki-SPA/src/app/components/forum/forum.component.html
@@ -22,8 +22,9 @@
   <div class="row threads">
     <div class="col">
       <div class="row card promoting-card my-4"
-           *ngFor="let thread of threads"
-           [id]="'thread-' + thread.id">
+           *ngFor="let thread of threads; let i = index;"
+           [id]="'thread-' + thread.id"
+           on-mouseover="hoveredIndex = i" on-mouseleave="hoveredIndex = null">
 
         <!-- Card content -->
         <div class="card-body d-flex flex-row pb-1" [routerLink]="['/forum', thread.id]">
@@ -38,14 +39,14 @@
             <h4 class="card-title font-weight-bold mb-2">{{ thread.title}}</h4>
             <!-- Subtitle -->
             <p class="card-text">{{ thread.authorName }}</p>
-            <p class="card-text"><i class="far fa-clock pr-2"></i>{{ thread.created | timeAgo}}</p>
+            <p class="card-text"><i class="far fa-clock pr-2"></i>{{ thread.created.toString() | timeAgo }}</p>
 
           </div>
 
         </div>
 
         <!-- Card content -->
-        <div class="card-body" *ngIf="authService.roleMatch(['Admin', 'Moderator']) ||
+        <div class="card-body" *ngIf="hoveredIndex === i && authService.roleMatch(['Admin', 'Moderator']) ||
         (authService.currentUser !== undefined && thread.authorId === authService.currentUser.id)">
           <i class="fas fa-trash text-muted float-right p-1 my-1" data-toggle="tooltip" data-placement="top" title="Delete thread"
              (click)="showDeleteModal(thread.id)"></i>
