Change date to string in post component

--- a/eOdznaki-SPA/src/app/components/post/post.component.html
+++ b/eOdznaki-SPA/src/app/components/post/post.component.html
@@ -46,7 +46,7 @@
             <p class="card-title font-weight-normal mb-2">{{ post.content }}</p>
             <!-- Subtitle -->
             <p class="card-text">{{ post.authorName }}</p>
-            <p class="card-text"><i class="far fa-clock pr-2"></i>{{ post.created | timeAgo }}</p>
+            <p class="card-text"><i class="far fa-clock pr-2"></i>{{ post.created.toString() | timeAgo }}</p>
 
           </div>
 
