--- a/eOdznaki-SPA/src/app/components/search/search.component.html
+++ b/eOdznaki-SPA/src/app/components/search/search.component.html
@@ -23,7 +23,7 @@
               <div class="card-body d-flex flex-row justify-content-center pb-1">
 
                 <!-- Avatar -->
-                <img src="{{ thread.authorAvatar || '../../../assets/user.png' }}" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
+                <img src="{{ thread.author.avatarUrl || '../../../assets/user.png' }}" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
 
                 <!-- Content -->
                 <div>
@@ -31,7 +31,7 @@
                   <!-- Title -->
                   <h4 class="card-title font-weight-bold mb-2">{{ thread.title}}</h4>
                   <!-- Subtitle -->
-                  <p class="card-text">{{ thread.authorName }}</p>
+                  <p class="card-text">{{ thread.author.userName }}</p>
                   <p class="card-text"><i class="far fa-clock pr-2"></i>{{ thread.created.toString() | timeAgo}}</p>
 
                 </div>
@@ -50,14 +50,14 @@
                 <div class="card-body d-flex flex-row">
 
                   <!-- Avatar -->
-                  <img src="{{ post.authorAvatar || '../../../assets/user.png' }}" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
+                  <img src="{{ post.author.avatarUrl || '../../../assets/user.png' }}" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
 
                   <!-- Content -->
                   <div>
 
                     <p class="card-title font-weight-normal mb-2">{{ post.content }}</p>
                     <!-- Subtitle -->
-                    <p class="card-text">{{ post.authorName }}</p>
+                    <p class="card-text">{{ post.author.userName }}</p>
                     <p class="card-text"><i class="far fa-clock pr-2"></i>{{ post.created.toString() | timeAgo }}</p>
 
                   </div>
