--- a/eOdznaki-SPA/src/app/components/forum/forum.component.html
+++ b/eOdznaki-SPA/src/app/components/forum/forum.component.html
@@ -30,7 +30,7 @@
         <div class="card-body d-flex flex-row pb-1" [routerLink]="['/forum', thread.id]">
 
           <!-- Avatar -->
-          <img src="{{ thread.authorAvatar || '../../../assets/user.png' }}" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
+          <img src="{{ thread.author.avatarUrl || '../../../assets/user.png' }}" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
 
           <!-- Content -->
           <div>
@@ -38,7 +38,7 @@
             <!-- Title -->
             <h4 class="card-title font-weight-bold mb-2">{{ thread.title}}</h4>
             <!-- Subtitle -->
-            <p class="card-text">{{ thread.authorName }}</p>
+            <p class="card-text">{{ thread.author.userName }}</p>
             <p class="card-text"><i class="far fa-clock pr-2"></i>{{ thread.created.toString() | timeAgo }}</p>
 
           </div>
@@ -47,7 +47,7 @@
 
         <!-- Card content -->
         <div class="card-body" *ngIf="hoveredIndex === i && authService.roleMatch(['Admin', 'Moderator']) ||
-        (authService.currentUser !== undefined && thread.authorId === authService.currentUser.id)">
+        (authService.currentUser !== undefined && thread.author.id === authService.currentUser.id)">
           <i class="fas fa-trash text-muted float-right p-1 my-1" data-toggle="tooltip" data-placement="top" title="Delete thread"
              (click)="showDeleteModal(thread.id)"></i>
           <i class="fas fa-edit text-muted float-right p-1 my-1 mr-3" data-toggle="tooltip" data-placement="top" title="Edit thread"></i>
