--- a/eOdznaki-SPA/src/app/components/pagination/pagination.component.html
+++ b/eOdznaki-SPA/src/app/components/pagination/pagination.component.html
@@ -1,4 +1,4 @@
-<ul class="pagination pg-blue p-0" *ngIf="totalItems > 0">
+<ul *ngIf="totalItems > 0" class="pagination pg-blue p-0 mb-4">
 
   <li class="page-item first">
     <button aria-label="First"
