--- a/eOdznaki-SPA/src/app/components/navbar/navbar.component.html
+++ b/eOdznaki-SPA/src/app/components/navbar/navbar.component.html
@@ -5,10 +5,10 @@
   <links>
 
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item" routerLinkActive="nav-item active">
+      <li class="nav-item">
         <a class="nav-link waves-light" [routerLink]="['/home']" mdbWavesEffect>Home<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item" routerLinkActive="nav-item active">
+      <li class="nav-item">
         <a class="nav-link waves-light" [routerLink]="['/forum']" mdbWavesEffect >Forum</a>
       </li>
       <li class="nav-item">
