--- a/eOdznaki-SPA/src/app/components/search/search.component.html
+++ b/eOdznaki-SPA/src/app/components/search/search.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container pt-4">
 
   <div class="row card promoting-card mt-4" style="background-image: url(../../../assets/background-gradient.jpg);">
     <div class="col toolbar mt-2">
@@ -13,65 +13,66 @@
 
   <div class="row threads">
     <div class="col">
-      <div class="row card promoting-card my-4"
+      <div class="row card card-result promoting-card my-4"
            *ngFor="let thread of threads"
            [routerLink]="['/forum', thread.id]"
            [id]="'thread-' + thread.id">
 
-           <div class="col">
+        <div class="col px-0">
              <!-- Card content -->
-              <div class="card-body d-flex flex-row justify-content-center pb-1">
+          <div class="card-body d-flex flex-row pb-1">
 
-                <!-- Avatar -->
-                <img src="{{ thread.author.avatarUrl || '../../../assets/user.png' }}" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
+            <!-- Avatar -->
+            <img alt="avatar" class="rounded-circle mr-3" height="50px"
+                 src="{{ thread.author.avatarUrl || '../../../assets/user.png' }}" width="50px">
 
-                <!-- Content -->
-                <div>
+            <!-- Content -->
+            <div>
 
-                  <!-- Title -->
-                  <h4 class="card-title font-weight-bold mb-2">{{ thread.title}}</h4>
-                  <!-- Subtitle -->
-                  <p class="card-text">{{ thread.author.userName }}</p>
-                  <p class="card-text"><i class="far fa-clock pr-2"></i>{{ thread.created.toString() | timeAgo}}</p>
+              <!-- Title -->
+              <h4 class="card-title font-weight-bold mb-2 thread-title-hover">{{ thread.title }}</h4>
+              <!-- Subtitle -->
+              <p class="card-text">{{ thread.author.userName }}</p>
+              <p class="card-text"><i class="far fa-clock pr-2"></i>{{ thread.created.toString() | timeAgo }}</p>
 
-                </div>
-
-              </div>
-          </div>
-
-        <div class="col">
-          <div class="row posts ml-5" *ngIf="thread.forumPosts">
-            <div class="col">
-              <div class="row card promoting-card mb-3"
-                   *ngFor="let post of thread.forumPosts;"
-                   [id]="'post-' + post.id">
-
-                <!-- Card content -->
-                <div class="card-body d-flex flex-row">
-
-                  <!-- Avatar -->
-                  <img src="{{ post.author.avatarUrl || '../../../assets/user.png' }}" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
-
-                  <!-- Content -->
-                  <div>
-
-                    <p class="card-title font-weight-normal mb-2">{{ post.content }}</p>
-                    <!-- Subtitle -->
-                    <p class="card-text">{{ post.author.userName }}</p>
-                    <p class="card-text"><i class="far fa-clock pr-2"></i>{{ post.created.toString() | timeAgo }}</p>
-
-                  </div>
-                </div>
-              </div>
             </div>
+
+              </div>
           </div>
-        </div>
+
+        <!--<div class="col">-->
+        <!--<div class="row posts ml-5" *ngIf="thread.forumPosts">-->
+        <!--<div class="col">-->
+        <!--<div class="row card promoting-card mb-3"-->
+        <!--*ngFor="let post of thread.forumPosts;"-->
+        <!--[id]="'post-' + post.id">-->
+
+        <!--&lt;!&ndash; Card content &ndash;&gt;-->
+        <!--<div class="card-body d-flex flex-row">-->
+
+        <!--&lt;!&ndash; Avatar &ndash;&gt;-->
+        <!--<img src="{{ post.author.avatarUrl || '../../../assets/user.png' }}" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">-->
+
+        <!--&lt;!&ndash; Content &ndash;&gt;-->
+        <!--<div>-->
+
+        <!--<p class="card-title font-weight-normal mb-2">{{ post.content }}</p>-->
+        <!--&lt;!&ndash; Subtitle &ndash;&gt;-->
+        <!--<p class="card-text">{{ post.author.userName }}</p>-->
+        <!--<p class="card-text"><i class="far fa-clock pr-2"></i>{{ post.created.toString() | timeAgo }}</p>-->
+
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
     </div>
    </div>
  </div>
 
   <div class="row">
-    <div class="col d-flex justify-content-center pagination">
+    <div *ngIf="pagination.totalItems > pagination.itemsPerPage" class="col d-flex justify-content-center pagination">
       <app-pagination
         [totalItems]="pagination.totalItems"
         [currentPage]="pagination.currentPage"
