--- a/eOdznaki-SPA/src/app/components/navbar/navbar.component.html
+++ b/eOdznaki-SPA/src/app/components/navbar/navbar.component.html
@@ -14,6 +14,9 @@
       <li class="nav-item">
         <a class="nav-link waves-light" mdbWavesEffect [routerLink]="['/trail']">Trail</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light" [routerLink]="['/leaderboard']" mdbWavesEffect >Leaderboard</a>
+      </li>
       <li *ngIf="authService.roleMatch(['Admin', 'Moderator'])" class="nav-item dropdown" dropdown>
         <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light">
           Manage<span class="caret"></span></a>
